plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.css
/* ... */
.jumbotron .container {
  background-color: rgba(255,255,255,0.8);
  border-radius: 0.3rem;
  padding: 1rem 2rem;
}

.metric-card svg {
  margin: 0.5rem auto;
  height:50px;
}
.metric {
  font-size: 2rem;
  font-weight: 300;
  line-height: 1.2;
}
.metric-title {
  font-size: 1rem;
  margin-bottom: 0.5rem;
  font-weight: 500;
}

pre {
  margin-bottom: 0;
}
pre.nfcommand {
  white-space: pre-wrap;
  border: 1px solid #ccc;
  padding: 10px 15px;
  border-radius: 5px;
  background-color: #F0F2F4;
  font-size: 0.8rem;
}

table td {
  max-width: 200px;
  overflow-x: auto;
}

.script_block.short {
  max-height: 30px;
  overflow-y: hidden;
  cursor: pointer;
}

footer {
  background-color: #ededed;
  margin: 50px 0 0;
  padding: 20px 0;
  border-top: 1px solid #cccccc;
  color: #999999;
  font-size: 0.8rem;
}
footer a {
  color: #999999;
  text-decoration: underline;
}

#nf-form-humanreadable {
  margin-bottom: 1rem;
}

#tasks_table_filter {
  display: flex;
}
#tasks_table_filter>.btn-group {
  vertical-align: top;
  margin-right: 1rem;
  height: calc(1.8125rem + 3px);
}
#tasks_table_filter .buttons-colvisGroup {
  padding: 0.2rem 0.75rem;
}
#tasks_table_filter .dt-buttons::before {
  content: "Filter: ";
  padding: 0.2rem 0.5rem;
  font-size: 1.1rem;
}

.tab-pane {
  display: block !important;
  position: relative !important;
  visibility: hidden;
  overflow: hidden;
  width: 100%;
  height: 0;
  z-index: 0;
  opacity: 0;
  transition: visibility 0s, opacity 0.3s ease-in-out;
}

.tab-pane.active {
  visibility: visible;
  overflow: visible;
  height: auto;
  z-index: 1;
  opacity: 1;
}

